# Runa

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: runa.desktop  rune-aur-helper.desktop
scripts/: install.sh  uninstall.sh
src/rune/: __init__.py  __main__.py
src/rune/api/: __init__.py  aur.py
src/rune/core/: __init__.py  installer.py  pacman.py
src/rune/gui/: __init__.py  app.py  dialogs.py  widgets.py
