[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-aur-helper"
version = "0.1.4"
description = "A graphical AUR package manager for Arch Linux"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rune"}
]
keywords = ["aur", "arch", "linux", "package-manager", "gtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.9"
dependencies = [
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rune-aur-helper"
Repository = "https://github.com/yourusername/rune-aur-helper"
Issues = "https://github.com/yourusername/rune-aur-helper/issues"

[project.scripts]
rune-aur-helper = "rune.gui.app:main"

[project.gui-scripts]
rune-aur-helper-gui = "rune.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.desktop"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
